--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"node server/index.js\" \"live-server public\"",
+    "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  }
+  ,
   "author": "Irina Ignatenok",
   "license": "ISC",
   "keywords": [],
